--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -70,36 +70,33 @@ jobs:
     - name: Input JSON File - Dev
       if: ${{ env.DEV == 'yes' }}
       run: |-
-        cd /$DIRECTORY/
-        sudo chmod 777 *.*
-        cat variables-dev.json >> /$DIRECTORY/variables.json <<EOF
+        cat variables-dev.json >> variables.json <<EOF
         EOF
         
     - name: Input JSON File - Prod
       if: ${{ env.PROD == 'yes' }}
       run: |-
-        cd /$DIRECTORY/
-        sudo chmod 777 *.*
-        cat variables-prod.json >> /$DIRECTORY/variables.json <<EOF
+        cat variables-prod.json >> variables.json <<EOF
         EOF
         
     - name: Bash Start-Up Script 
       run: |-
-        cd /$DIRECTORY/
-        sudo chmod 777 *.*
-        cat startup-script.sh /$DIRECTORY/startup-script.sh <<EOF
+        cat startup-script.sh >> startup-script.sh <<EOF
         EOF
         
     - name: Python Terraform CDK Script
       run: |-
-        cd /$DIRECTORY/
-        sudo chmod 777 *.*
-        cat main.py /$DIRECTORY/main.py<<EOF
+        cat main.py >> main.py<<EOF
         EOF
         
     - name: Current Working Directory, Files & Sizes
       run: | 
          cd /$DIRECTORY
+         df -m
+         free -m
+         pwd
+         ls
+         cd /
          df -m
          free -m
          pwd
