--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -40,9 +40,9 @@ jobs:
          python3 -m pip install boto3 --upgrade awscli
          sudo apt-get install npm
          sudo npm install -g npm
-         sudo npm install -g cdktf-cli@^0.7.0
-         sudo npm install -g cdktf@^0.7.0
-         sudo npm install -g constructs@^10.0.9
+         sudo npm install -g cdktf-cli@^0.3.0
+         sudo npm install -g cdktf@^0.3.0
+         #sudo npm install -g constructs@^10.0.9
          #sudo npm install -g @types/node@14.17.27
          cd /
          sudo mkdir $DIRECTORY
@@ -59,13 +59,20 @@ jobs:
          sudo echo ' {
             "language": "python",
             "app": "python3 ./main.py",
-            "terraformProviders": ["aws@~> 3.24"] 
+            "terraformProviders": ["aws@~> 3.0"] 
          }' > /$DIRECTORY/cdktf.json
          #sudo cdktf get
          df -m
          free -m
          pwd
          ls
+         sudo scp -r variables-dev.json variables-dev-vanila.json
+         
+    - name: Test Copy File
+      uses: canastro/copy-file-action@master
+      with:
+        source: 'variables-dev.json'
+        target: 'variables.json'
              
     - name: Input JSON File - Dev
       if: ${{ env.DEV == 'yes' }}
