--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -28,8 +28,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with:
-        path: /
+      # note: checkout directory: /home/runner/work/repo-name/CI-name
     
     - name: Set Up Python 3.8
       uses: actions/setup-python@v2
@@ -68,7 +67,8 @@ jobs:
          free -m
          pwd
          ls
-         sudo scp -r /variables-dev.json /$DIRECTORY/variables.json
+         #sudo scp -r /home/runner/work/UNEMY-Stack-on-AWS-Lightsail/UNEMY-Stack-on-AWS-Lightsail/variables-dev.json /$DIRECTORY/variables.json
+         sudo scp -r ./UNEMY-Stack-on-AWS-Lightsail/variables-dev.json /$DIRECTORY/variables.json
          sudo scp -r ./.github/workflows/tf-python-cdk.yml /$DIRECTORY/tf-python-cdk.yml
              
     - name: Input JSON File - Dev
