--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -67,8 +67,8 @@ jobs:
          free -m
          pwd
          ls
-         #sudo scp -r /home/runner/work/UNEMY-Stack-on-AWS-Lightsail/UNEMY-Stack-on-AWS-Lightsail/variables-dev.json /$DIRECTORY/variables.json
-         sudo scp -r ./UNEMY-Stack-on-AWS-Lightsail/variables-dev.json /$DIRECTORY/variables.json
+         sudo scp -r /home/runner/work/UNEMY-Stack-on-AWS-Lightsail/UNEMY-Stack-on-AWS-Lightsail/variables-dev.json /$DIRECTORY/variables.json
+         #sudo scp -r ./UNEMY-Stack-on-AWS-Lightsail/variables-dev.json /$DIRECTORY/variables.json
          sudo scp -r ./.github/workflows/tf-python-cdk.yml /$DIRECTORY/tf-python-cdk.yml
              
     - name: Input JSON File - Dev
