--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -1,4 +1,4 @@
-name: CI - UNEMY-Stack-on-AWS-Lighsail
+name: CI - UNEMY
 
 on:
   push:
@@ -17,7 +17,8 @@ jobs:
       APPLY: 'no'
       PROJECT_NAME: 'UNEMY-Stack-on-AWS-Lighsail'
       PROJECT_DESCRIPTION: 'Deploy UNEMY Stack on AWS Lighsail'
-      DIRECTORY: 'deploy'
+      CDK_INIT_DIRECTORY: 'init'
+      BASE_DIRECTORY: '/home/runner/work'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -28,7 +29,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      # note: checkout directory: /home/runner/work/repo-name/CI-name
+      # note: checkout directory: /home/runner/work/${repo-name}/${CI-name}
     
     - name: Set Up Python 3.8
       uses: actions/setup-python@v2
@@ -44,67 +45,52 @@ jobs:
          sudo npm install -g cdktf-cli@^0.7.0
          sudo npm install -g cdktf@^0.7.0
          sudo npm install -g constructs@^10.0.9
-         #sudo npm install -g @types/node@14.17.27
-         cd /
-         sudo mkdir $DIRECTORY
-         cd /$DIRECTORY
+         cd $BASE_DIRECTORY
+         sudo mkdir $CDK_INIT_DIRECTORY
+         cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws @types/node@14.17.27
-         sudo chmod 777 *.*
-         cd /$DIRECTORY/
+         sudo chmod 777 *.*Y
          df -m
          free -m
          pwd
          ls
-         sudo chmod 777 *.*
          sudo echo ' {
             "language": "python",
             "app": "python3 ./main.py",
             "terraformProviders": ["aws@~> 3.0"] 
-         }' > /$DIRECTORY/cdktf.json
+         }' > $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/cdktf.json
          #sudo cdktf get
+         sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/variables.json
          df -m
          free -m
          pwd
          ls
-         sudo scp -r /home/runner/work/UNEMY-Stack-on-AWS-Lightsail/UNEMY-Stack-on-AWS-Lightsail/variables-dev.json /$DIRECTORY/variables.json
-         #sudo scp -r ./UNEMY-Stack-on-AWS-Lightsail/variables-dev.json /$DIRECTORY/variables.json
-         sudo scp -r ./.github/workflows/tf-python-cdk.yml /$DIRECTORY/tf-python-cdk.yml
-             
+         
     - name: Input JSON File - Dev
       if: ${{ env.DEV == 'yes' }}
-      run: |-
-        cat variables-dev.json >> variables.json <<EOF
-        EOF
+      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/variables.json
+   
         
     - name: Input JSON File - Prod
       if: ${{ env.PROD == 'yes' }}
-      run: |-
-        cat variables-prod.json >> variables.json <<EOF
-        EOF
+      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-prod.json $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/variables.json
+
         
     - name: Bash Start-Up Script 
-      run: |-
-        cat startup-script.sh <<EOF
-        EOF
+      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/startup-script.sh $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/startup-script.sh
         
     - name: Python Terraform CDK Script
-      run: |-
-        cat main.py <<EOF
-        EOF
+      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/main.py $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/main.py
+     
         
     - name: Current Working Directory, Files & Sizes
       run: | 
-         cd /$DIRECTORY
+         cd $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY
          df -m
          free -m
          pwd
-         ls
-         cd /
-         df -m
-         free -m
-         pwd
-         ls
+         ls -l
 
     - name: Python Terraform CDK Plan
       if:  (env.PLAN == 'yes') && ( env.DEV == 'yes' || env.PROD == 'yes' )
