--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -45,7 +45,7 @@ jobs:
          sudo npm install -g cdktf-cli@^0.7.0
          sudo npm install -g cdktf@^0.7.0
          sudo npm install -g constructs@^10.0.9
-         cd $BASE_DIRECTORY
+         cd /
          sudo mkdir $CDK_INIT_DIRECTORY
          cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
@@ -59,9 +59,9 @@ jobs:
             "language": "python",
             "app": "python3 ./main.py",
             "terraformProviders": ["aws@~> 3.0"] 
-         }' > $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/cdktf.json
+         }' > /$CDKTF_INIT_DIRECTORY/cdktf.json
          #sudo cdktf get
-         sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/variables.json
+         sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json /$CDKTF_INIT_DIRECTORY/variables.json
          df -m
          free -m
          pwd
@@ -69,24 +69,24 @@ jobs:
          
     - name: Input JSON File - Dev
       if: ${{ env.DEV == 'yes' }}
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/variables.json
+      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json /$CDKTF_INIT_DIRECTORY/variables.json
    
         
     - name: Input JSON File - Prod
       if: ${{ env.PROD == 'yes' }}
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-prod.json $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/variables.json
+      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-prod.json /$CDKTF_INIT_DIRECTORY/variables.json
 
         
     - name: Bash Start-Up Script 
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/startup-script.sh $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/startup-script.sh
+      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/startup-script.sh /$CDKTF_INIT_DIRECTORY/startup-script.sh
         
     - name: Python Terraform CDK Script
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/main.py $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY/main.py
+      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/main.py /$CDKTF_INIT_DIRECTORY/main.py
      
         
     - name: Current Working Directory, Files & Sizes
       run: | 
-         cd $BASE_DIRECTORY/$CDKTF_INIT_DIRECTORY
+         cd /$CDKTF_INIT_DIRECTORY
          df -m
          free -m
          pwd
