--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -15,8 +15,8 @@ jobs:
       PROD: 'no'
       DIFF: 'no'
       APPLY: 'no'
-      PROJECT_NAME: 'UNEMY-Stack-on-AWS-Lighsail'
-      PROJECT_DESCRIPTION: 'Deploy UNEMY Stack on AWS Lighsail'
+      PROJECT_NAME: 'UNEMY-AWS-Lighsail'
+      PROJECT_DESCRIPTION: 'Deploy UNEMY On AWS Lighsail'
       CDK_INIT_DIRECTORY: 'init'
       BASE_DIRECTORY: '/home/runner/work'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -47,10 +47,10 @@ jobs:
          sudo npm install -g constructs@^10.0.9
          cd /
          sudo mkdir $CDK_INIT_DIRECTORY
-         cd $CDKTF_INIT_DIRECTORY
+         cd /$CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws @types/node@14.17.27
-         sudo chmod 777 *.*Y
+         sudo chmod 777 *.*
          df -m
          free -m
          pwd
@@ -67,20 +67,18 @@ jobs:
          pwd
          ls
          
-    - name: Input JSON File - Dev
+    - name: Copy Input JSON File - Dev
       if: ${{ env.DEV == 'yes' }}
       run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json /$CDKTF_INIT_DIRECTORY/variables.json
    
-        
-    - name: Input JSON File - Prod
+    - name: Copy Input JSON File - Prod
       if: ${{ env.PROD == 'yes' }}
       run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-prod.json /$CDKTF_INIT_DIRECTORY/variables.json
 
-        
-    - name: Bash Start-Up Script 
+    - name: Copy Bash Start-Up Script 
       run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/startup-script.sh /$CDKTF_INIT_DIRECTORY/startup-script.sh
         
-    - name: Python Terraform CDK Script
+    - name: Copy Python Terraform CDK Script
       run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/main.py /$CDKTF_INIT_DIRECTORY/main.py
      
         
