--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -45,9 +45,10 @@ jobs:
          sudo npm install -g cdktf-cli@^0.7.0
          sudo npm install -g cdktf@^0.7.0
          sudo npm install -g constructs@^10.0.9
-         cd /
+         ##cd /
          sudo mkdir $CDKTF_INIT_DIRECTORY
-         cd /$CDKTF_INIT_DIRECTORY
+         ##cd /$CDKTF_INIT_DIRECTORY
+         cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws @types/node@14.17.27
          sudo chmod 777 *.*
@@ -59,28 +60,33 @@ jobs:
             "language": "python",
             "app": "python3 ./main.py",
             "terraformProviders": ["aws@~> 3.0"] 
-         }' > /$CDKTF_INIT_DIRECTORY/cdktf.json
+         ' > cdktf.json
+         ##}' > /$CDKTF_INIT_DIRECTORY/cdktf.json
          #sudo cdktf get
-         sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json /$CDKTF_INIT_DIRECTORY/variables.json
-         df -m
-         free -m
-         pwd
-         ls
+         ##sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json /$CDKTF_INIT_DIRECTORY/variables.json
+         ##df -m
+         ##free -m
+         ##pwd
+         ##ls
          
     - name: Copy Input JSON File - Dev
       if: ${{ env.DEV == 'yes' }}
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json /$CDKTF_INIT_DIRECTORY/variables.json
+      #run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-dev.json /$CDKTF_INIT_DIRECTORY/variables.json
+      run: sudo scp -r variables-dev.json ./$CDKTF_INIT_DIRECTORY/variables.json
    
+      
     - name: Copy Input JSON File - Prod
       if: ${{ env.PROD == 'yes' }}
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-prod.json /$CDKTF_INIT_DIRECTORY/variables.json
-
+      #run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-prod.json /$CDKTF_INIT_DIRECTORY/variables.json
+      run: sudo scp -r variables-prod.json ./$CDKTF_INIT_DIRECTORY/variables.json
+      
     - name: Copy Bash Start-Up Script 
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/startup-script.sh /$CDKTF_INIT_DIRECTORY/startup-script.sh
-        
+      #run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/startup-script.sh /$CDKTF_INIT_DIRECTORY/startup-script.sh
+      run: sudo scp -r startup-script.sh ./$CDKTF_INIT_DIRECTORY/startup-script.sh
+      
     - name: Copy Python Terraform CDK Script
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/main.py /$CDKTF_INIT_DIRECTORY/main.py
-     
+      #run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/main.py /$CDKTF_INIT_DIRECTORY/main.py
+      run: sudo scp -r main.py ./$CDKTF_INIT_DIRECTORY/main.py
         
     - name: Current Working Directory, Files & Sizes
       run: | 
