--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -11,7 +11,7 @@ jobs:
   Ubuntu-Python-Terraform-CDK:
     runs-on: ubuntu-latest
     env:
-      DEV: 'yes'
+      DEV: 'no'
       PROD: 'no'
       DIFF: 'no'
       APPLY: 'no'
@@ -45,6 +45,7 @@ jobs:
          sudo npm install -g cdktf-cli@^0.7.0
          sudo npm install -g cdktf@^0.7.0
          sudo npm install -g constructs@^10.0.9
+         pwd
          sudo mkdir $CDKTF_INIT_DIRECTORY
          cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
@@ -78,13 +79,13 @@ jobs:
       run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/variables-prod.json ./$CDKTF_INIT_DIRECTORY/variables.json
       #run: sudo scp -r variables-prod.json ./$CDKTF_INIT_DIRECTORY/variables.json
       
-    - name: Copy Bash Start-Up Script 
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/startup-script.sh ./$CDKTF_INIT_DIRECTORY/startup-script.sh
-      #run: sudo scp -r startup-script.sh ./$CDKTF_INIT_DIRECTORY/startup-script.sh
+    #- name: Copy Bash Start-Up Script 
+    #  run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/startup-script.sh ./$CDKTF_INIT_DIRECTORY/startup-script.sh
+    #  #run: sudo scp -r startup-script.sh ./$CDKTF_INIT_DIRECTORY/startup-script.sh
       
-    - name: Copy Python Terraform CDK Script
-      run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/main.py ./$CDKTF_INIT_DIRECTORY/main.py
-      #run: sudo scp -r main.py ./$CDKTF_INIT_DIRECTORY/main.py
+    #- name: Copy Python Terraform CDK Script
+    #  run: sudo scp -r $BASE_DIRECTORY/UNEMY-Stack-on-AWS-Lightsail/UNEMY/main.py ./$CDKTF_INIT_DIRECTORY/main.py
+    #  #run: sudo scp -r main.py ./$CDKTF_INIT_DIRECTORY/main.py
         
     - name: Current Working Directory, Files & Sizes
       run: | 
