--- a/.github/workflows/python-cdktf-unemy.yml
+++ b/.github/workflows/python-cdktf-unemy.yml
@@ -20,6 +20,9 @@ jobs:
       CDKTF_INIT_DIRECTORY: 'init'
       BASE_DIRECTORY: '/home/runner/work'
       REPO_NAME: 'UNEMY-Stack-on-AWS-Lightsail'
+      CDKTF_VERSION: '0.7.0'
+      CONSTRUCTS_VERSION: '10.0.9'
+      NODEJS_VERSION: ''
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -43,14 +46,14 @@ jobs:
          python3 -m pip install boto3 --upgrade awscli
          sudo apt-get install npm
          sudo npm install -g npm
-         sudo npm install -g cdktf-cli@^0.7.0
-         sudo npm install -g cdktf@^0.7.0
-         sudo npm install -g constructs@^10.0.9
+         sudo npm install -g cdktf-cli@^$CDKTF_VERSION
+         sudo npm install -g cdktf@^$CDKTF_VERSION
+         sudo npm install -g constructs@^$CONSTRUCTS_VERSION
          pwd
          sudo mkdir $CDKTF_INIT_DIRECTORY
          cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
-         sudo npm install -a @cdktf/provider-aws @types/node@14.17.27
+         sudo npm install -a @cdktf/provider-aws @types/node@$NODEJS_VERSION
          sudo chmod 777 *.*
          sudo echo ' {
             "language": "python",
