--- a/.github/workflows/python-cdktf-unemy.yml
+++ b/.github/workflows/python-cdktf-unemy.yml
@@ -54,7 +54,8 @@ jobs:
          sudo mkdir $CDKTF_INIT_DIRECTORY
          cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
-         sudo npm install -a @cdktf/provider-aws @types/node@$NODEJS_VERSION
+         sudo npm install -a @cdktf/provider-aws 
+         #sudo npm install @types/node@$NODEJS_VERSION
          sudo npm -v
          sudo chmod 777 *.*
          sudo echo ' {
