--- a/.github/workflows/python-cdktf-unemy.yml
+++ b/.github/workflows/python-cdktf-unemy.yml
@@ -21,7 +21,7 @@ jobs:
       BASE_DIRECTORY: '/home/runner/work'
       REPO_NAME: ${{ github.event.repository.name }} 
       # 'UNEMY-Stack-on-AWS-Lightsail'
-      CDKTF_VERSION: '0.4.1' #'0.6.4' #'0.7.0'
+      CDKTF_VERSION: '0.7.0-pre.383'
       CONSTRUCTS_VERSION: '10.0.9'
       NODEJS_VERSION: '14.14.31'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
