--- a/.github/workflows/python-cdktf-unemy.yml
+++ b/.github/workflows/python-cdktf-unemy.yml
@@ -21,9 +21,9 @@ jobs:
       BASE_DIRECTORY: '/home/runner/work'
       REPO_NAME: ${{ github.event.repository.name }} 
       # 'UNEMY-Stack-on-AWS-Lightsail'
-      CDKTF_VERSION: '0.6.4-pre.379'
+      CDKTF_VERSION: '0.6.4'
       CONSTRUCTS_VERSION: '10.0.9'
-      NODEJS_VERSION: '14.14.31'
+      NODEJS_VERSION: '14.17.6'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -55,7 +55,7 @@ jobs:
          cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws 
-         #sudo npm install @types/node@$NODEJS_VERSION
+         sudo npm install @types/node@$NODEJS_VERSION
          sudo npm -v
          sudo chmod 777 *.*
          sudo echo ' {
