--- a/.github/workflows/python-cdktf-unemy.yml
+++ b/.github/workflows/python-cdktf-unemy.yml
@@ -20,9 +20,9 @@ jobs:
       CDKTF_INIT_DIRECTORY: 'init'
       BASE_DIRECTORY: '/home/runner/work'
       REPO_NAME: ${{ github.event.repository.name }} 
-      CDKTF_VERSION: '0.6.4'
+      CDKTF_VERSION: '0.7.0'
       CONSTRUCTS_VERSION: '10.0.9'
-      NODEJS_VERSION: '14.17.6'
+      NODEJS_VERSION: '14.17.27'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -54,7 +54,7 @@ jobs:
          cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws 
-         #sudo npm install @types/node@$NODEJS_VERSION
+         sudo npm install @types/node@$NODEJS_VERSION
          sudo npm -v
          sudo chmod 777 *.*
          sudo echo ' {
