--- a/.github/workflows/python-cdktf-unemy.yml
+++ b/.github/workflows/python-cdktf-unemy.yml
@@ -21,8 +21,8 @@ jobs:
       BASE_DIRECTORY: '/home/runner/work'
       REPO_NAME: ${{ github.event.repository.name }} 
       CDKTF_VERSION: '0.7.0'
-      CONSTRUCTS_VERSION: '10.0.9'
-      NODEJS_VERSION: '14.17.27'
+      #CONSTRUCTS_VERSION: '10.0.9'
+      #NODEJS_VERSION: '14.17.27'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -54,9 +54,7 @@ jobs:
          cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws 
-         sudo npm install npm
-         sudo npm install @types/node@$NODEJS_VERSION
-         sudo npm -v
+         #sudo npm install @types/node@$NODEJS_VERSION
          sudo chmod 777 *.*
          sudo echo ' {
             "language": "python",
