--- a/.github/workflows/python-cdktf-unemy.yml
+++ b/.github/workflows/python-cdktf-unemy.yml
@@ -36,10 +36,13 @@ jobs:
     - uses: actions/checkout@v2
       # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
     
-    - name: Set Up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+    #- name: Set Up Python 3.8
+    - name: Set Up Node.js 3.8
+      #uses: actions/setup-python@v2
+      uses: actions/setup-node@v2
+      #with:
+        #python-version: 3.8
+    
     
     - name: Install Dependencies
       run: | 
