--- a/.github/workflows/python-cdktf-unemy.yml
+++ b/.github/workflows/python-cdktf-unemy.yml
@@ -23,6 +23,7 @@ jobs:
       CDKTF_VERSION: '0.7.0'
       PROVIDER_ONE_AWS: 'aws@~> 3.63.0'
       #CONSTRUCTS_VERSION: '10.0.9'
+      #NODEJS_VERSION: '16.x'
       #NODEJS_VERSION: '14.17.27'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -36,14 +37,16 @@ jobs:
     - uses: actions/checkout@v2
       # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
     
-    #- name: Set Up Python 3.8
-    - name: Set Up Node.js
-      #uses: actions/setup-python@v2
+    - name: Set Up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+        
+    - name: Set Up Node.js 17.0.1
       uses: actions/setup-node@v2
-      #with:
-        #python-version: 3.8
-    
-    
+      with:
+        node-version: 17.0.1
+
     - name: Install Dependencies
       run: | 
          sudo apt-get -y install python3-pip awscli
@@ -65,7 +68,7 @@ jobs:
             "app": "python3 ./main.py",
             "terraformProviders": [$PROVIDER_ONE_AWS] 
          ' > cdktf.json
-         sudo cdktf get
+         #sudo cdktf get
          
     - name: Copy Files to Init Directory & List - Dev
       if: ${{ env.DEV == 'yes' }}
