--- a/.github/workflows/python-cdktf-unemy.yml
+++ b/.github/workflows/python-cdktf-unemy.yml
@@ -59,16 +59,23 @@ jobs:
          pwd
          sudo mkdir $CDKTF_INIT_DIRECTORY
          cd $CDKTF_INIT_DIRECTORY
-         sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
+         #sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
+         sudo cdktf init --template="typescript" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
+      
          sudo npm install -a @cdktf/provider-aws 
          #sudo npm install @types/node@$NODEJS_VERSION
          sudo chmod 777 *.*
+         #sudo echo ' {
+         #   "language": "python",
+         #   "app": "python3 ./main.py",
+         #   "terraformProviders": [$PROVIDER_ONE_AWS] 
+         #' > cdktf.json
          sudo echo ' {
             "language": "python",
-            "app": "python3 ./main.py",
+            "app": "npm run --silent compile && node main.js",
             "terraformProviders": [$PROVIDER_ONE_AWS] 
          ' > cdktf.json
-         #sudo cdktf get
+         sudo cdktf get
          
     - name: Copy Files to Init Directory & List - Dev
       if: ${{ env.DEV == 'yes' }}
