--- a/.github/workflows/cdk-terraform-unemy.yml
+++ b/.github/workflows/cdk-terraform-unemy.yml
@@ -63,7 +63,8 @@ jobs:
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          #sudo cdktf init --template="typescript" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws 
-         sudo npm install cdktf@^$CDKTF_VERSION
+         sudo npm install -D cdktf@^$CDKTF_VERSION
+         sudo npm install -D cli-spinners
          #sudo npm install @types/node@$NODEJS_VERSION
          sudo chmod 777 *.*
          sudo echo ' {
