--- a/.github/workflows/cdk-terraform-unemy.yml
+++ b/.github/workflows/cdk-terraform-unemy.yml
@@ -20,10 +20,13 @@ jobs:
       CDKTF_INIT_DIRECTORY: 'init'
       BASE_DIRECTORY: '/home/runner/work'
       REPO_NAME: ${{ github.event.repository.name }} 
-      CDKTF_VERSION: '0.7.0'
-      PROVIDER_ONE_AWS: 'aws@~> 3.63.0'
+      CDKTF_VERSION: '0.6.3'
+      PROVIDER_ONE_AWS: 'aws@~> 3.0'
       PROVIDER_ONE_VULTR: 'vultr@~> 2.5.0'
-      #CONSTRUCTS_VERSION: '10.0.9'
+      #CDKTF_VERSION: '0.7.0'
+      #PROVIDER_ONE_AWS: 'aws@~> 3.63.0'
+      #PROVIDER_ONE_VULTR: 'vultr@~> 2.5.0'
+      CONSTRUCTS_VERSION: '10.0.5'
       #NODEJS_VERSION: '16.x'
       #NODEJS_VERSION: '14.17.27'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -55,22 +58,20 @@ jobs:
          sudo apt-get install npm
          sudo npm install -g npm
          sudo npm install -g cdktf-cli@^$CDKTF_VERSION
-         #sudo npm install -g cdktf@^$CDKTF_VERSION
-         #sudo npm install -g constructs@^$CONSTRUCTS_VERSION
+         sudo npm install -g cdktf@^$CDKTF_VERSION
+         sudo npm install -g constructs@^$CONSTRUCTS_VERSION
          pwd
          sudo mkdir $CDKTF_INIT_DIRECTORY
          cd $CDKTF_INIT_DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          #sudo cdktf init --template="typescript" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws 
-         sudo npm install -D cdktf@^$CDKTF_VERSION
-         sudo npm install -D cli-spinners
          #sudo npm install @types/node@$NODEJS_VERSION
          sudo chmod 777 *.*
          sudo echo ' {
             "language": "python",
             "app": "python3 ./main.py",
-            "terraformProviders": [$PROVIDER_ONE_VULTR]  
+            "terraformProviders": [$PROVIDER_ONE_VULTR, $PROVIDER_ONE_AWS]  
          ' > cdktf.json
          #sudo echo ' {
          #   "language": "python",
