--- a/.github/workflows/cdk-terraform-unemy.yml
+++ b/.github/workflows/cdk-terraform-unemy.yml
@@ -66,7 +66,7 @@ jobs:
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          #sudo cdktf init --template="typescript" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws 
-         sudo npm install -a @cdktf/provider-vultr
+         #sudo npm install -a @cdktf/provider-vultr
          #sudo npm install @types/node@$NODEJS_VERSION
          sudo chmod 777 *.*
          sudo echo ' {
